# PartsLedger

./: .envrc.example  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  RELEASING.md  concept.md  pyproject.toml  requirements-dev.txt
.claude/: codeowners.yaml  settings.json
.claude/skills/bash-no-prompts/: SKILL.md
.claude/skills/capture/: SKILL.md
.claude/skills/check-branch/: SKILL.md
.claude/skills/check-tool/: SKILL.md
.claude/skills/co-inventory-master-index/: SKILL.md
.claude/skills/co-inventory-schema/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/epic-run/: SKILL.md
.claude/skills/fix-markdown/: SKILL.md
.claude/skills/housekeep/: SKILL.md
.claude/skills/inventory-add/: SKILL.md
.claude/skills/inventory-page/: SKILL.md
.claude/skills/os-context/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/tasks/: SKILL.md
.claude/skills/ts-epic-list/: SKILL.md
.claude/skills/ts-epic-new/: SKILL.md
.claude/skills/ts-idea-archive/: SKILL.md
.claude/skills/ts-idea-list/: SKILL.md
.claude/skills/ts-idea-new/: SKILL.md
.claude/skills/ts-task-active/: SKILL.md
.claude/skills/ts-task-done/: SKILL.md
.claude/skills/ts-task-list/: SKILL.md
.claude/skills/ts-task-pause/: SKILL.md
.claude/skills/update-scripts-readme/: SKILL.md
.github/workflows/: ci.yml  release.yml
.vibe/: config.toml
awesome-task-system/: CHANGELOG.md  LAYOUT.md  TASK_SYSTEM.md
awesome-task-system/scripts/: housekeep.py
awesome-task-system/scripts/tests/: test_housekeep_concurrency.py  test_update_idea_overview.py
awesome-task-system/skills/ts-task-new/: SKILL.md
awesome-task-system/skills/ts-task-reopen/: SKILL.md
docs/developers/: ARCHITECTURE.md  AUTONOMY.md  BRANCH_PROTECTION_CONCEPT.md  CI_PIPELINE.md  CODE_OF_CONDUCT.md  CODE_OWNERS.md  CODING_STANDARDS.md  COMMIT_POLICY.md  DEVELOPMENT_SETUP.md  MERMAID_STYLE_GUIDE.md  SECURITY_REVIEW.md  TASK_SYSTEM.md  TESTING.md  config.toml.example  task-system.yaml
docs/developers/adr/: 0000-template.md  0001-library-as-installable-package.md  0002-hedge-lint-pattern-set.md  0003-capture-skill-lands-before-secondary-keys.md  README.md
docs/developers/ideas/: OVERVIEW.md
docs/developers/ideas/archived/: idea-001-partsledger-concept.md  idea-002-align-with-circuitsmith.md  idea-004-markdown-inventory-schema.md  idea-005-skill-path-today.md  idea-006-usb-camera-capture.md  idea-007-visual-recognition-dinov2-vlm.md  idea-008-metadata-enrichment.md  idea-009-circuitsmith-prefer-inventory-adapter.md  idea-011-resistor-color-band-detector.md  idea-012-integration-pass.md  idea-014-project-setup-review-vs-circuitsmith.md
docs/developers/ideas/open/: idea-001-partsledger-concept.md  idea-002-align-with-circuitsmith.md  idea-003-external-inventory-tool-integration.md  idea-004-markdown-inventory-schema.md  idea-005-skill-path-today.md  idea-006-usb-camera-capture.md  idea-007-visual-recognition-dinov2-vlm.md  idea-008-metadata-enrichment.md  idea-009-circuitsmith-prefer-inventory-adapter.md  idea-010-local-vlm-hosting.md  idea-013-capture-setup-and-color-calibration.md
docs/developers/tasks/: EPICS.md  KANBAN.md  OVERVIEW.md
docs/developers/tasks/active/: epic-001-align-with-circuitsmith.md  epic-002-markdown-inventory-schema.md  epic-003-skill-path-today.md  epic-005-usb-camera-capture.md  epic-009-integration-followups.md
docs/developers/tasks/closed/: epic-004-project-setup.md  task-001-delete-sync-layer.md  task-002-python-skeleton.md  task-003-replace-pre-commit.md  task-004-upgrade-commit-skill.md  task-005-settings-json.md  task-006-docs-verbatim-port.md  task-007-architecture-doc.md  task-008-security-review-hooks.md  task-009-codeowner-mechanism.md  task-010-codeowner-starter-skills.md  task-011-claude-md-rewrite.md  task-012-epic-run-and-autonomy.md  task-013-apply-branch-protection.md  (+21 more)
inventory/: INVENTORY.md
inventory/parts/: 7660s.md  pic12f675.md  pic16f628.md  tl082.md  tl084.md  xr2206cp.md
scripts/: DRIFT_AUDIT.md  README.md  codeowner_hook.py  commit-pathspec.sh  housekeep.py  install_git_hooks.sh  lint_hedge_language.py  lint_inventory.py  portability_lint.py  pre-commit  release_burnup.py  release_snapshot.py  security_review_changes.py  sync_task_system.py  task_system_config.py  update_idea_overview.py  update_scripts_readme.py  update_task_overview.py
scripts/git-hooks/: post-merge  pre-merge-commit  pre-rebase
scripts/skills/: capture-cli.cmd  capture-cli.sh
scripts/tests/: test_codeowner_hook.py  test_housekeep.py  test_housekeep_concurrency.py  test_release_burnup.py  test_release_snapshot.py  test_task_system_config.py  test_update_idea_overview.py
src/partsledger/: .portability-allow.txt  __init__.py
src/partsledger/_dev/: __init__.py  portability_lint.py
src/partsledger/capture/: __init__.py  __main__.py  camera_select.py  viewfinder.py
src/partsledger/inventory/: __init__.py  family.py  hedge_lint.py  lint.py  writer.py
src/partsledger/resistor_reader/: __init__.py
tests/unit/: test_camera_select.py  test_capture.py  test_capture_cli.py  test_capture_skill.py  test_extras.py  test_family.py  test_hedge_lint.py  test_lint_inventory.py  test_portability_lint.py  test_viewfinder.py  test_writer.py
(+62 files in other folders)
